Done Admin Pages

--- a/admin/admin-dashboard.html
+++ b/admin/admin-dashboard.html
@@ -5,25 +5,30 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Admin Dashboard - Interview MS</title>
   <link rel="stylesheet" href="../css/admin/admin-dashboard.css">
+  <link rel="stylesheet" href="../css/admin/sidebar.css">
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700;800&display=swap" rel="stylesheet">
 </head>
 <body>
   <div class="app">
     <aside class="sidebar">
-      <div class="brand">Interview MS</div>
+      <div class="brand">IMS</div>
       <nav>
-        <ul>
-          <li class="active">Dashboard</li>
-          <li><a href="admin-manage-candidates.html" class="side-link">Manage Candidates</a></li>
-          <li><a href="admin-manage-interviewers.html" class="side-link">Manage Interviewers</a></li>
-          <li><a href="admin-manage-jobs.html" class="side-link">Manage Jobs</a></li>
-          <li><a href="admin-schedule.html" class="side-link">Interview Schedule</a></li>
-          <li><a href="admin-reports.html" class="side-link">Reports & Analytics</a></li>
-          <li><a href="admin-settings.html" class="side-link">Settings</a></li>
+        <ul class="nav-list">
+          <li><a href="admin-dashboard.html" class="nav-link active"><span class="icon">🏠</span><span class="label">Dashboard</span></a></li>
+          <li><a href="admin-manage-candidates.html" class="nav-link"><span class="icon">👥</span><span class="label">Candidates</span></a></li>
+          <li><a href="admin-manage-interviewers.html" class="nav-link"><span class="icon">🧑‍💼</span><span class="label">Interviewers</span></a></li>
+          <li><a href="admin-manage-jobs.html" class="nav-link"><span class="icon">💼</span><span class="label">Jobs</span></a></li>
+          <li><a href="admin-interviews.html" class="nav-link"><span class="icon">📅</span><span class="label">Schedule</span></a></li>
+          <li><a href="admin-reports.html" class="nav-link"><span class="icon">📊</span><span class="label">Reports</span></a></li>
+          <!-- <li><a href="admin-settings.html" class="nav-link"><span class="icon">⚙️</span><span class="label">Settings</span></a></li> -->
         </ul>
       </nav>
-      <div class="sidebar-footer">
-        <button id="logoutBtn" class="logout-cta">Logout</button>
+      <div class="sidebar-footer user-block">
+        <img src="../images/avatar.png" alt="Admin" class="avatar-sm">
+        <div class="user-meta">
+          <div class="user-name">Admin User</div>
+          <a id="logoutBtn" class="logout-link">Log Out</a>
+        </div>
       </div>
     </aside>
 
